fix dark mode in pages

--- a/login.css
+++ b/login.css
@@ -11,3 +11,17 @@
 .full-width {
     flex-grow: 1;
 }
+
+
+.btn-google {
+    color: #545454;
+background-color: #ffffff;
+box-shadow: 0 1px 2px 1px #ddd;
+}
+
+
+.accordion-sh{
+    color: var(--font-color);
+    background-color: var(--background);
+    
+}
